# poetry-maturin-error

./: pyproject.toml  reproduce.sh
maturin-dep/: Cargo.toml  pyproject.toml
maturin-dep/src/: lib.rs
